--- a/climate_emulator.ipynb
+++ b/climate_emulator.ipynb
@@ -34,11 +34,11 @@
    "id": "5e148452-ba75-472e-8af1-40adc048892b",
    "metadata": {},
    "source": [
-    "|           | nowcasting   | weather          | s2s          | climate          |\n",
-    "|-----------|--------------|------------------|--------------|------------------|\n",
-    "| timescale | hours        | days             | months       | years            |\n",
-    "| target    | observations | model            | observations | model            |\n",
-    "| goal      | accuracy     | accuracy/runtime | accuracy     | accuracy/runtime |"
+    "|           | nowcasting       | weather          | s2s          | climate          |\n",
+    "|-----------|------------------|------------------|--------------|------------------|\n",
+    "| timescale | hours            | days             | months       | years            |\n",
+    "| target    | observations     | model            | observations | model            |\n",
+    "| goal      |                   accuracy/runtime                                    |"
    ]
   },
   {
@@ -64,9 +64,22 @@
   {
    "cell_type": "markdown",
    "id": "44ac2b4b-33fc-45c3-a08b-4ca3ef144148",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### How to setup weather and climate modeling as video prediction task: ClimateBench"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0657edab-253a-478f-94db-2ce677b5b09b",
+   "metadata": {},
+   "source": [
+    "Nowcasting -- SEVIR, 500gb\n",
+    "s2s -- rodeo\n",
+    "Weather -- WeatherBench, 500gb\n",
+    "Climate -- ClimateBench, 2gb"
    ]
   },
   {
@@ -102,10 +115,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f27ff583-051b-4dc0-b496-85aadac003bf",
+   "metadata": {},
+   "source": [
+    "### Visualize data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec639886-e93a-4e8c-8dc4-d8f2fddf13fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = dataloader.next()\n",
+    "visualize_data(sample)\n",
+    "print_shape(sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "208e0c88-3e85-4d21-8887-8c7c6fc3aeef",
    "metadata": {},
    "source": [
     "#### Setup video prediction model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79d7dcf9-1e65-43b9-8445-9b6d03f6b488",
+   "metadata": {},
+   "source": [
+    "### Model selection:\n",
+    "- Unet: picks up small, large features, popular choice, easy accessible, fast, flexible, data efficients\n",
+    "- RF: extract manual features, local\n",
+    "- Neural operators:\n",
+    "- GNN:\n",
+    "- Transformers: \n",
+    "- GANs: high-res features, deepmind precip., hard to train\n",
+    "How to pick up on time?\n",
+    "- RNN/LSTM: temporal memory, input multiple time steps, \n",
+    "- stack time in channel dim\n",
+    "- "
    ]
   },
   {
