added co2, ch4 histograms, min,max, mean, std toe xplore data. didnt change climate_emulator_tutorial

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -32,6 +32,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "dzeHYa5GCxN7"
+   },
+   "outputs": [],
+   "source": [
+    "# MIT License\n",
+    "#\n",
+    "#@title Copyright (c) 2021 CCAI Community Authors { display-mode: \"form\" }\n",
+    "#\n",
+    "# Permission is hereby granted, free of charge, to any person obtaining a\n",
+    "# copy of this software and associated documentation files (the \"Software\"),\n",
+    "# to deal in the Software without restriction, including without limitation\n",
+    "# the rights to use, copy, modify, merge, publish, distribute, sublicense,\n",
+    "# and/or sell copies of the Software, and to permit persons to whom the\n",
+    "# Software is furnished to do so, subject to the following conditions:\n",
+    "#\n",
+    "# The above copyright notice and this permission notice shall be included in\n",
+    "# all copies or substantial portions of the Software.\n",
+    "#\n",
+    "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+    "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+    "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL\n",
+    "# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+    "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING\n",
+    "# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER\n",
+    "# DEALINGS IN THE SOFTWARE."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "13i7KQ9t-CV8"
@@ -93,7 +124,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fe0d85a0c10>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f38a61e8950>"
       ]
      },
      "execution_count": 2,
@@ -403,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -419,8 +450,7 @@
       "Frozen({'time': 251, 'longitude': 144, 'latitude': 96}) ssp126\n",
       "Frozen({'time': 251, 'longitude': 144, 'latitude': 96}) ssp370\n",
       "Frozen({'time': 251, 'longitude': 144, 'latitude': 96}) ssp585\n",
-      "Frozen({'time': 165, 'longitude': 144, 'latitude': 96}) hist-GHG\n",
-      "Frozen({'time': 165, 'longitude': 144, 'latitude': 96}) hist-aer\n"
+      "Frozen({'time': 165, 'longitude': 144, 'latitude': 96}) hist-GHG\n"
      ]
     }
    ],
@@ -8460,5 +8490,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
