declutter climate-emulator-tutorial.ipynb moving normalization to data climatebench.py script; verified that normalization mathces ClimateBench notebook

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -32,37 +32,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "dzeHYa5GCxN7"
-   },
-   "outputs": [],
-   "source": [
-    "# MIT License\n",
-    "#\n",
-    "#@title Copyright (c) 2021 CCAI Community Authors { display-mode: \"form\" }\n",
-    "#\n",
-    "# Permission is hereby granted, free of charge, to any person obtaining a\n",
-    "# copy of this software and associated documentation files (the \"Software\"),\n",
-    "# to deal in the Software without restriction, including without limitation\n",
-    "# the rights to use, copy, modify, merge, publish, distribute, sublicense,\n",
-    "# and/or sell copies of the Software, and to permit persons to whom the\n",
-    "# Software is furnished to do so, subject to the following conditions:\n",
-    "#\n",
-    "# The above copyright notice and this permission notice shall be included in\n",
-    "# all copies or substantial portions of the Software.\n",
-    "#\n",
-    "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
-    "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
-    "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL\n",
-    "# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
-    "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING\n",
-    "# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER\n",
-    "# DEALINGS IN THE SOFTWARE."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "13i7KQ9t-CV8"
@@ -267,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "id": "xVzk4V7qUu2R"
    },
@@ -323,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -420,21 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 921
-    },
-    "id": "A_YgmQmcRasZ",
-    "outputId": "0bf8cacb-eeb2-41ed-89ae-53f3e3f373d0"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -450,12 +405,13 @@
       "Frozen({'time': 251, 'longitude': 144, 'latitude': 96}) ssp126\n",
       "Frozen({'time': 251, 'longitude': 144, 'latitude': 96}) ssp370\n",
       "Frozen({'time': 251, 'longitude': 144, 'latitude': 96}) ssp585\n",
-      "Frozen({'time': 165, 'longitude': 144, 'latitude': 96}) hist-GHG\n"
+      "Frozen({'time': 165, 'longitude': 144, 'latitude': 96}) hist-GHG\n",
+      "Frozen({'time': 165, 'longitude': 144, 'latitude': 96}) hist-aer\n"
      ]
     }
    ],
    "source": [
-    "#@title code: load ClimateBench data\n",
+    "#@title code: load ClimateBench training data\n",
     "from emcli.data.climatebench import load_climatebench_train_data\n",
     "\n",
     "scenarios = ['ssp126','ssp370','ssp585','hist-GHG','hist-aer']\n",
@@ -469,14 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {
     "cellView": "form",
     "colab": {
@@ -485,89 +434,83 @@
     "id": "AR9gDDsSM8R-",
     "outputId": "d00e0025-856f-4102-dfa2-39c19a1fc94f"
    },
+   "outputs": [],
+   "source": [
+    "#@title code: Normalize training data\n",
+    "# note: climatebench does not normalize outputs, Y_train.\n",
+    "from emcli.data.climatebench import compute_mean_std_X_train\n",
+    "from emcli.data.climatebench import normalize_data_arr\n",
+    "\n",
+    "# Compute mean and standard deviations of each input variable\n",
+    "meanstd_inputs = {}\n",
+    "for var in ['CO2', 'CH4', 'SO2', 'BC']:\n",
+    "    meanstd_inputs[var] = compute_mean_std_X_train(data_arr = X_train, var=var)\n",
+    "# Normalize the input data array.\n",
+    "X_train_norm = normalize_data_arr(data_arr=X_train, meanstd=meanstd_inputs, vars=['CO2', 'CH4', 'SO2', 'BC'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "co2 train mean, std:  (1074.172303244536, 1755.690699230666)\n"
+      "co2 train mean, std: \t (1074.172303244536, 1755.690699230666)\n",
+      "ch4 train mean, std: \t (0.1927369743762821, 0.18457590641432994)\n",
+      "bc train mean, std: \t (1.4947905009818064e-13, 1.0313342554838387e-12)\n",
+      "so2 train mean, std: \t (2.5623359997066755e-12, 2.250114566783271e-11)\n"
      ]
     }
    ],
    "source": [
-    "#@title code: post-process and normalize training data\n",
-    "\n",
-    "# CB utilities for normalizing the input data\n",
-    "def normalize(data, var, meanstd_dict):\n",
-    "    mean = meanstd_dict[var][0]\n",
-    "    std = meanstd_dict[var][1]\n",
-    "    return (data - mean)/std\n",
-    "\n",
-    "def unnormalize(data, var, meanstd_dict):\n",
-    "    mean = meanstd_dict[var][0]\n",
-    "    std = meanstd_dict[var][1]\n",
-    "    return data * std + mean\n",
-    "\n",
-    "  # to-do: change normalize/ unnormalize functions to use torch\n",
-    "  #        put into dataloader.py\n",
-    "\n",
-    "# Compute mean/std of each variable for the whole dataset\n",
-    "meanstd_inputs = {}\n",
-    "\n",
-    "array = np.concatenate([X_train[i]['CO2'].data for i in [0, 3, 4]] +\n",
-    "                      [X_train[i]['CO2'].sel(time=slice(len_historical, None)).data for i in range(1, 3)])\n",
-    "\n",
-    "meanstd_inputs['CO2'] = (array.mean(), array.std())\n",
-    "print('co2 train mean, std: ', meanstd_inputs['CO2'] )\n",
-    "\n",
-    "# normalize input data\n",
-    "# todo: normalize output data.\n",
-    "var = 'CO2'\n",
-    "X_train_norm = []\n",
-    "for i, train_xr in enumerate(X_train):\n",
-    "    var_dims = train_xr['CO2'].dims\n",
-    "    train_xr=train_xr.assign({var: (var_dims, normalize(train_xr['CO2'].data, 'CO2', meanstd_inputs))})\n",
-    "    X_train_norm.append(train_xr)"
+    "print('co2 train mean, std: \\t', meanstd_inputs['CO2'])\n",
+    "print('ch4 train mean, std: \\t', meanstd_inputs['CH4'])\n",
+    "print('bc train mean, std: \\t', meanstd_inputs['BC'])\n",
+    "print('so2 train mean, std: \\t', meanstd_inputs['SO2'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {
     "id": "gZhbMeiBNHon"
    },
    "outputs": [],
    "source": [
-    "#@title code: post-process and normalize test data\n",
+    "#@title code: Load test data\n",
     "\n",
-    "# Open test data.\n",
-    "# Concatenate historical and ssp245 future data\n",
-    "# todo: is this code discarding the historical data?\n",
-    "X_test = xr.open_mfdataset([data_path + 'inputs_historical.nc',\n",
-    "                            data_path + 'inputs_ssp245.nc']).compute()\n",
+    "# Open test data, which is ground-truth historical and ssp245 future data\n",
+    "paths_test_inputs = [data_path + 'inputs_historical.nc', # only ground-truth historical data\n",
+    "                     data_path + 'inputs_ssp245.nc'] # only contains future data (86,)\n",
+    "paths_test_outputs = [data_path + 'outputs_historical.nc',\n",
+    "                      data_path + 'outputs_ssp245.nc']\n",
+    "X_test = xr.open_mfdataset(paths_test_inputs).compute()\n",
+    "Y_test = xr.open_mfdataset(paths_test_outputs).compute()\n",
     "\n",
-    "Y_test = xr.open_mfdataset([data_path + 'outputs_historical.nc',\n",
-    "                            data_path + 'outputs_ssp245.nc']).compute()\n",
+    "# opt: Drop non-relevant variables\n",
+    "# X_test = X_test.drop(['SO2','CH4','BC'])\n",
+    "# Y_test = Y_test.drop(['diurnal_temperature_range','pr','pr90'])\n",
     "\n",
-    "# Extract relevant variables\n",
-    "X_test = X_test.drop(['SO2','CH4','BC'])\n",
-    "Y_test = Y_test.drop(['diurnal_temperature_range','pr','pr90'])\n",
-    "\n",
-    "# Post-process and normalize data\n",
-    "var = 'CO2'\n",
-    "var_dims = X_test['CO2'].dims\n",
-    "X_test = X_test.assign({var: (var_dims, normalize(X_test['CO2'].data, 'CO2', meanstd_inputs))})\n",
-    "\n",
-    "Y_test = Y_test.mean('member') # Mean over ensemble members\n",
-    "\n",
-    "# Format as a list of scenarios.\n",
-    "X_test = [X_test]\n",
-    "Y_test = [Y_test]"
+    "# Normalize test data\n",
+    "X_test = normalize_data_arr(data_arr=[X_test], meanstd=meanstd_inputs)#, keys=['CO2', 'CH4', 'SO2', 'BC'])\n",
+    "# todo: verify Y_test normalization in https://github.com/duncanwp/ClimateBench/blob/main/baseline_models/CNN-LTSM_model.ipynb\n",
+    "# note: [] formats the data as a list of scenarios\n",
+    "Y_test = [Y_test.mean('member')] # Mean over ensemble members"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
