added interim2processed data script for mapping global co2 onto global temperature

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "xVzk4V7qUu2R"
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "nemPXHMjFZT9"
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {
     "cellView": "form",
     "colab": {
@@ -446,12 +446,12 @@
     "for var in ['CO2', 'CH4', 'SO2', 'BC']:\n",
     "    meanstd_inputs[var] = compute_mean_std_X_train(data_arr = X_train, var=var)\n",
     "# Normalize the input data array.\n",
-    "X_train_norm = normalize_data_arr(data_arr=X_train, meanstd=meanstd_inputs, vars=['CO2', 'CH4', 'SO2', 'BC'])"
+    "X_train_norm = normalize_data_arr(data_arr=X_train, meanstd=meanstd_inputs, keys=['CO2', 'CH4', 'SO2', 'BC'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -474,14 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {
     "id": "gZhbMeiBNHon"
    },
@@ -510,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -540,9 +533,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
-    "id": "yXzgOgpv5PH6"
+    "id": "yXzgOgpv5PH6",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "# Data Visualization:\n",
@@ -607,6 +629,19 @@
     "  - passsing train and val loader\n",
     "- Issue:\n",
     "  - No memory. Instant quadrupling of CO2 will result in instant temperature quadrupling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import emcli.data.interim_to_processed as i2p\n",
+    "data_train = i2p.interim_to_global_global(X_global_local=X_train, \n",
+    "                             Y_global_local=Y_train,\n",
+    "                             input_keys=['CO2'],\n",
+    "                             target_keys=['tas'])"
    ]
   },
   {
@@ -757,7 +792,7 @@
     "from torch.utils.data import Dataset\n",
     "\n",
     "class AutoregressiveDataset(Dataset):\n",
-    "    def __init__(self, X, Y, len_snippet=3, split='train',\n",
+    "    def __init__(self, X, Y, t_pushforward=3, split='train',\n",
     "        dtype=np.float32):\n",
     "        '''\n",
     "        todo:\n",
@@ -770,12 +805,12 @@
     "              'tas': xarray.core.dataarray.DataArray(n_time, n_lat, n_lon)} *\n",
     "              n_scenarios):\n",
     "              global surface temperature field of multiple scenarios\n",
-    "          len_snippet int: Number of time steps that target is ahead of input.\n",
-    "              E.g., [t=0]->[t=3] for len_snippet = 3\n",
+    "          t_pushforward int: Number of time steps that target is ahead of input.\n",
+    "              E.g., [t=0]->[t=3] for t_pushforward = 3\n",
     "          split str\n",
     "          dtype np.dtype: Data type for in-/output and model\n",
     "        Returns\n",
-    "          data list(input_state: np.array(len_snippet, in_channels, n_lat, n_lon),\n",
+    "          data list(input_state: np.array(t_pushforward, in_channels, n_lat, n_lon),\n",
     "              np.array(out_channels, n_lat, n_lon)):\n",
     "              Concatenated list of individual data samples\n",
     "        '''\n",
@@ -789,18 +824,18 @@
     "        for s in range(n_scenarios):\n",
     "          n_tsteps = X[s]['CO2'].shape[0]\n",
     "          for t in range(n_tsteps):\n",
-    "            if (t + len_snippet) < n_tsteps:\n",
-    "              # Return all time steps from first to len_snippet as input\n",
-    "              co2 = X[s]['CO2'][t:t+len_snippet]\n",
+    "            if (t + t_pushforward) < n_tsteps:\n",
+    "              # Return all time steps from first to t_pushforward as input\n",
+    "              co2 = X[s]['CO2'][t:t+t_pushforward]\n",
     "              co2 = co2.to_numpy().astype(self.dtype)\n",
     "              # Broadcast mean co2 to global field\n",
-    "              co2 = co2[:,None,None] * np.ones((len_snippet, n_lat, n_lon), dtype=self.dtype)\n",
-    "              tas = Y[s]['tas'][t:t+len_snippet].to_numpy().astype(self.dtype)\n",
+    "              co2 = co2[:,None,None] * np.ones((t_pushforward, n_lat, n_lon), dtype=self.dtype)\n",
+    "              tas = Y[s]['tas'][t:t+t_pushforward].to_numpy().astype(self.dtype)\n",
     "              input = np.concatenate((tas[:,None,...], co2[:,None,...]), axis=1)\n",
-    "              # Return len_snippet'th time step as target: tas_field. Model\n",
-    "              # will forecast len_snippet steps autoregressively before loss\n",
+    "              # Return t_pushforward'th time step as target: tas_field. Model\n",
+    "              # will forecast t_pushforward steps autoregressively before loss\n",
     "              # is applied\n",
-    "              target = Y[s]['tas'][t+len_snippet,...]\n",
+    "              target = Y[s]['tas'][t+t_pushforward,...]\n",
     "              target = target.to_numpy().astype(self.dtype)\n",
     "              target = target[None,...]\n",
     "\n",
