init commit of data src code

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "xVzk4V7qUu2R"
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "cellView": "form",
     "colab": {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "id": "gZhbMeiBNHon"
    },
@@ -503,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -531,34 +538,6 @@
     "print('Number of test scenarios: ', len(X_test))\n",
     "print('Test input and output shape: ', X_test[0]['CO2'].shape, Y_test[0]['tas'].shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -633,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,6 +622,13 @@
     "                             input_keys=['CO2'],\n",
     "                             target_keys=['tas'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -779,102 +765,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "cellView": "form",
-    "id": "YDU-ePT79VrD"
-   },
-   "outputs": [],
-   "source": [
-    "#@title code: autoregressive dataset\n",
-    "\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset\n",
-    "\n",
-    "class AutoregressiveDataset(Dataset):\n",
-    "    def __init__(self, X, Y, t_pushforward=3, split='train',\n",
-    "        dtype=np.float32):\n",
-    "        '''\n",
-    "        todo:\n",
-    "          - load data lazy\n",
-    "        Args:\n",
-    "          X  list(xarray.core.dataset.Dataset{\n",
-    "              'CO2': xarray.core.dataarray.DataArray(n_time)} * n_scenarios):\n",
-    "              globally averaged co2 over time of multiple scenarios\n",
-    "          Y list(xarray.core.dataset.Dataset{\n",
-    "              'tas': xarray.core.dataarray.DataArray(n_time, n_lat, n_lon)} *\n",
-    "              n_scenarios):\n",
-    "              global surface temperature field of multiple scenarios\n",
-    "          t_pushforward int: Number of time steps that target is ahead of input.\n",
-    "              E.g., [t=0]->[t=3] for t_pushforward = 3\n",
-    "          split str\n",
-    "          dtype np.dtype: Data type for in-/output and model\n",
-    "        Returns\n",
-    "          data list(input_state: np.array(t_pushforward, in_channels, n_lat, n_lon),\n",
-    "              np.array(out_channels, n_lat, n_lon)):\n",
-    "              Concatenated list of individual data samples\n",
-    "        '''\n",
-    "        # index data into list\n",
-    "        self.data = []\n",
-    "        self.dtype = dtype\n",
-    "\n",
-    "        n_lat, n_lon = Y[0]['tas'].shape[1:] # e.g., 96, 144\n",
-    "        n_scenarios = len(X)\n",
-    "        ## Concatenate data from all scenarios\n",
-    "        for s in range(n_scenarios):\n",
-    "          n_tsteps = X[s]['CO2'].shape[0]\n",
-    "          for t in range(n_tsteps):\n",
-    "            if (t + t_pushforward) < n_tsteps:\n",
-    "              # Return all time steps from first to t_pushforward as input\n",
-    "              co2 = X[s]['CO2'][t:t+t_pushforward]\n",
-    "              co2 = co2.to_numpy().astype(self.dtype)\n",
-    "              # Broadcast mean co2 to global field\n",
-    "              co2 = co2[:,None,None] * np.ones((t_pushforward, n_lat, n_lon), dtype=self.dtype)\n",
-    "              tas = Y[s]['tas'][t:t+t_pushforward].to_numpy().astype(self.dtype)\n",
-    "              input = np.concatenate((tas[:,None,...], co2[:,None,...]), axis=1)\n",
-    "              # Return t_pushforward'th time step as target: tas_field. Model\n",
-    "              # will forecast t_pushforward steps autoregressively before loss\n",
-    "              # is applied\n",
-    "              target = Y[s]['tas'][t+t_pushforward,...]\n",
-    "              target = target.to_numpy().astype(self.dtype)\n",
-    "              target = target[None,...]\n",
-    "\n",
-    "              self.data.append((input, target))\n",
-    "\n",
-    "        self.split = split\n",
-    "        # todo: self.transform = Compose([\n",
-    "        #     Resize((cfg['image_size'])),\n",
-    "        #     ToTensor()\n",
-    "        # ])\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        '''\n",
-    "            Returns the length of the dataset.\n",
-    "        '''\n",
-    "        return len(self.data)\n",
-    "\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        '''\n",
-    "            Returns a single data point at given idx.\n",
-    "            inputs torch.Tensor(\n",
-    "                in_channels, n_lat, n_lon):\n",
-    "            targets torch.Tensor(\n",
-    "                out_channels, n_lat, n_lon):\n",
-    "        '''\n",
-    "        input, target = self.data[idx]\n",
-    "\n",
-    "        # todo: load image lazily here.\n",
-    "        # todo: apply data augmentation transforms here.\n",
-    "\n",
-    "        input = torch.from_numpy(input)\n",
-    "        target = torch.from_numpy(target)\n",
-    "\n",
-    "        return input, target"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "cellView": "form",
@@ -898,6 +788,8 @@
    ],
    "source": [
     "#@title code: Create train and test dataset\n",
+    "\n",
+    "from emcli.data.autoregressiveDataset import AutoregressiveDataset\n",
     "\n",
     "len_snippet = 1 # Number of time steps that target is ahead of input.\n",
     "# E.g., [t=0]->[t=3] for len_snippet = 3. This is also the number of\n",
