renamed emcli/data to emcli/dataset

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -412,7 +412,7 @@
    ],
    "source": [
     "#@title code: load ClimateBench training data\n",
-    "from emcli.data.climatebench import load_climatebench_train_data\n",
+    "from emcli.dataset.climatebench import load_climatebench_train_data\n",
     "\n",
     "scenarios = ['ssp126','ssp370','ssp585','hist-GHG','hist-aer']\n",
     "len_historical = 165\n",
@@ -438,8 +438,8 @@
    "source": [
     "#@title code: Normalize training data\n",
     "# note: climatebench does not normalize outputs, Y_train.\n",
-    "from emcli.data.climatebench import compute_mean_std_X_train\n",
-    "from emcli.data.climatebench import normalize_data_arr\n",
+    "from emcli.dataset.climatebench import compute_mean_std_X_train\n",
+    "from emcli.dataset.climatebench import normalize_data_arr\n",
     "\n",
     "# Compute mean and standard deviations of each input variable\n",
     "meanstd_inputs = {}\n",
@@ -616,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import emcli.data.interim_to_processed as i2p\n",
+    "import emcli.dataset.interim_to_processed as i2p\n",
     "data_train = i2p.interim_to_global_global(X_global_local=X_train, \n",
     "                             Y_global_local=Y_train,\n",
     "                             input_keys=['CO2'],\n",
@@ -789,7 +789,7 @@
    "source": [
     "#@title code: Create train and test dataset\n",
     "\n",
-    "from emcli.data.autoregressiveDataset import AutoregressiveDataset\n",
+    "from emcli.dataset.autoregressiveDataset import AutoregressiveDataset\n",
     "\n",
     "len_snippet = 1 # Number of time steps that target is ahead of input.\n",
     "# E.g., [t=0]->[t=3] for len_snippet = 3. This is also the number of\n",
