completed linear baseline model that maps global co2 -> global tas -> local tas. Trained on all data. Tested and plotted on held-out ssp245

--- a/notebooks/explore_temperature.ipynb
+++ b/notebooks/explore_temperature.ipynb
@@ -24,8 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo_root = '../' # use 'climate-emulator-tutorial/' on colab and '../' on local machine\n",
-    "data_root = repo_root + 'data/'"
+    "repo_root = './' # use 'climate-emulator-tutorial/' on colab and './' on local machine\n",
+    "data_root = repo_root + 'data/'\n",
+    "path_climatebench_data = data_root + 'raw/climatebench/' # climatebench data"
    ]
   },
   {
@@ -86,7 +87,7 @@
     "\n",
     "scenarios = ['ssp126','ssp370','ssp585','hist-GHG','hist-aer']\n",
     "len_historical = 165\n",
-    "data_path = data_root + '/'\n",
+    "data_path = path_climatebench_data + '/'\n",
     "\n",
     "X_train, Y_train = load_climatebench_train_data(\n",
     "  simus=scenarios, len_historical=len_historical, \n",
