--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -93,7 +93,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fd430178f90>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f68881ca910>"
       ]
      },
      "execution_count": 2,
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,16 +861,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(750, 2, 1)"
+       "(750, 2)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,15 +894,15 @@
     "\n",
     "# Compute time difference: tas(t) - tas(t-1)\n",
     "tas_diff = np.diff(tas_global_hist, axis=1) # (time, 1, variables)\n",
-    "tas_global_hist[:,0:1,:] = tas_diff # overwrite tas(t-1)\n",
+    "tas_global_hist[:,0:1,:] = tas_diff # (time, 2, variables). overwrite tas(t-1)\n",
     "tas_global_hist = np.roll(tas_global_hist,shift=1,axis=1) # rearrange, s.t., first element is tas(t) and second is tas(t) - tas(t-1)\n",
-    "\n",
+    "tas_global_hist = tas_global_hist[...,0] # (time, 2) Discard variable dimension ()\n",
     "tas_global_hist.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "(750, 96, 144, 1)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,14 +927,14 @@
     "    # Extract snippets\n",
     "    Y_train_scenario_as_snippets = reshape_to_snippets_np(Y_train_scenario, skip_historical=(i<2), len_historical=len_historical, slider=len_snippets)\n",
     "    Y_train_tas_snippets.append(Y_train_scenario_as_snippets)\n",
-    "tas_global = np.concatenate(Y_train_tas_snippets, axis=0) # (time, len_snippets, lat, lon, variable)\n",
-    "tas_global = tas_global[:,-1,...] # Extract last time step tas(t)\n",
-    "tas_global[:].shape"
+    "tas_local = np.concatenate(Y_train_tas_snippets, axis=0) # (time, len_snippets, lat, lon, variable)\n",
+    "tas_local = tas_local[:,-1,...] # Extract last time step tas(t)\n",
+    "tas_local[:].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -949,72 +949,85 @@
     "# Double check that time-steps match each other\n",
     "from emcli.dataset.interim_to_processed import calculate_global_weighted_average_np\n",
     "\n",
-    "tas_global_avg = calculate_global_weighted_average_np(tas_global[...,0], Y_train[0]['tas'].latitude.data)\n",
-    "print(np.allclose(tas_global_avg, tas_global_hist[:,0,0], atol=0.0001))\n"
+    "tas_local_avg = calculate_global_weighted_average_np(tas_local[...,0], Y_train[0]['tas'].latitude.data)\n",
+    "print(np.allclose(tas_local_avg, tas_global_hist[:,0], atol=0.0001))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.8216111515900434, array([0.82161115]))"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tas_global_avg[0], tas_global_hist[0,0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(251, 96, 144)\n"
+      "n_degrees 1\n",
+      "inputs = (n_samples, n_features) =  (3, 2)\n",
+      "inputs_ = (n_samples, n_features*n_degrees!) =  (3, 3)\n",
+      "targets = (n_samples, n_gridpoints) =  (3, 2)\n",
+      "inputs_test = (n_samples_test, n_features*n_degrees) =  (1, 3)\n",
+      "Prediction = (n_samples_test, n_gridpoints) (1, 2)\n"
      ]
     }
    ],
    "source": [
-    "#@title: fit linear pattern scaling model that incorporates slope: global tas (t), tas_diff(t,t-1) -> local tas\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "# Retrieve global temperatures for training\n",
-    "tas_global = target_train.flatten() # (n_time,)\n",
-    "# Retrieve annual local temperature field for training\n",
-    "tas_local = np.concatenate([dataset['tas'].data for dataset in Y_train],axis=0) # (n_time, n_lat, n_lon)\n",
+    "# Edited from: https://stackoverflow.com/a/31467522\n",
     "\n",
-    "print(Y_train[0]['tas'].data.shape)\n",
-    "\"\"\"\n",
-    "# Initialize and fit pattern scaling model\n",
-    "pattern_scaling = ps.PatternScaling(deg=1)\n",
-    "pattern_scaling.train(tas_global, tas_local)\n",
+    "# 3-samples, bivariate inputs, 2 outputs per input:\n",
+    "X_inputs = np.array([[0.44, 0.68], [0.99, 0.23], [0.22, 0.45]]) # (n_samples, n_features)\n",
+    "Y_targets = np.array([[109.85, 155.72], [100., 109.85], [155.72, 100.]]) # (n_samples, n_gridpoints)\n",
     "\n",
-    "# Save model\n",
-    "dir_pattern_scaling = repo_root + 'runs/pattern_scaling/default/models/'\n",
-    "model_name = 'global_tas_to_local_tas.pkl'\n",
-    "ps.save(pattern_scaling, dir=dir_pattern_scaling,filename=model_name)\n",
+    "# generate a linear model of polynomial features\n",
+    "n_degrees = 1\n",
+    "print('n_degrees', n_degrees)\n",
+    "poly = PolynomialFeatures(degree=n_degrees)\n",
     "\n",
-    "# Retrieve test data. Use global tas predictions from previous model as input\n",
-    "tas_global_test = preds_lr.flatten() # (n_time,)\n",
-    "# tas_global_test = target_test.flatten() # (n_time,) # use ground-truth global tas as input\n",
+    "#transform the x data for proper fitting (for single variable type it returns,[1,x,x**2])\n",
+    "X_inputs_ = poly.fit_transform(X_inputs)\n",
     "\n",
-    "# Load model\n",
-    "# pattern_scaling = ps.load(dir=dir_pattern_scaling)\n",
+    "# Generate the regression object\n",
+    "clf = LinearRegression()\n",
+    "# Fit regression model\n",
+    "clf.fit(X_inputs_, Y_targets)\n",
     "\n",
-    "# Apply pattern scaling model on test data\n",
-    "preds_pattern_scaling = pattern_scaling.predict(tas_global_test) # (n_time, n_lat, n_lon)\n",
-    "\"\"\";"
+    "#predict is an independent variable for which we'd like to predict the value\n",
+    "X_test_inputs = np.array([[0.49, 0.18]])\n",
+    "X_test_inputs_ = poly.fit_transform(X_test_inputs) # Transform to model type\n",
+    "preds = clf.predict(X_test_inputs_)\n",
+    "\n",
+    "print(\"inputs = (n_samples, n_features) = \",X_inputs.shape)\n",
+    "print(\"inputs_ = (n_samples, n_features*n_degrees!) = \",X_inputs_.shape)\n",
+    "print(\"targets = (n_samples, n_gridpoints) = \",Y_targets.shape)\n",
+    "print(\"inputs_test = (n_samples_test, n_features*n_degrees) = \",X_test_inputs_.shape)\n",
+    "print(\"Prediction = (n_samples_test, n_gridpoints)\",preds.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((750,), (750,))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tas_local.shape, tas_global_hist[:,0].shape\n",
+    "\n",
+    "X_inputs = tas_global_hist # (750, 2)\n",
+    "Y_targets = Y_tas_local # (750, 96, 144, 1)\n",
+    "Y_targets = Y_tas_local.reshape((Y_tas_local.shape[0],-1)) # (750, 96*144)\n"
    ]
   },
   {
