tested smoothing of curves before multivariate linear regression fit. Added figures to git

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -93,7 +93,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7ffbf0403d90>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fc8a00a0750>"
       ]
      },
      "execution_count": 2,
@@ -662,7 +662,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear time-instant: global GHG -> global tas"
+    "### Time-instant, myopic models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear time-instant: global GHG -> global tas"
    ]
   },
   {
@@ -753,12 +760,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pattern scaling: global tas -> local tas"
+    "#### Linear Pattern scaling: global tas -> local tas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -847,27 +854,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19])"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "#### Polynomial pattern scaling: global tas -> local tas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +994,7 @@
        "Text(0.5, 1.0, 'NRMSE over Degree of Polynomial Pattern Scaling:\\nLinear: global CO2 -> global T \\n Polynomial: global T -> local T \\n Trained on 1850-2100.\\nTested on 2080-2100 in held-out ssp245')"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1021,12 +1016,12 @@
     "axs.set_xlabel('polynomial degree')\n",
     "axs.set_ylabel('Surface Temperature Anomalies.\\nNRMSE().')\n",
     "axs.set_title('NRMSE over polynomial degree. held-out ssp370.')\n",
-    "axs.set_title(f'NRMSE over Degree of Polynomial Pattern Scaling:\\nLinear: global CO2 -> global T \\n Polynomial: global T -> local T \\n Trained on 1850-2100.\\nTested on 2080-2100 in held-out {scenarios_test[0]}')\n"
+    "axs.set_title(f'NRMSE over Degree of Polynomial Pattern Scaling:\\nLinear: global CO2 -> global T \\n Polynomial: global T -> local T \\n Trained on 1850-2100.\\nTested on 2080-2100 in held-out {scenarios_test[0]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1168,7 @@
        "((750, 2), (750, 96, 144, 1))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,6 +1193,7 @@
     "    Args:\n",
     "        xr_list_of_datasets list(n_scenarios * xarray.Dataset{\n",
     "            data_var: xarray.DataArray(n_time, n_lat, n_lon)})\n",
+    "            Contains in- and outputs in interim data format.\n",
     "        data_var str : key to variable of interest, e.g., 'tas'\n",
     "        len_historical: length of historical datasets; used to remove\n",
     "            duplicate historical data.\n",
@@ -1212,6 +1208,8 @@
     "                match tas_global_diff\n",
     "    \"\"\"\n",
     "    len_snippets=2\n",
+    "\n",
+    "    # Smoothen data over time to remove internal variability.\n",
     "\n",
     "    # Drup duplicate historical data\n",
     "    tas_local_xr = drop_duplicate_historical(xr_list_of_datasets, \n",
